spacing fix for teams

--- a/source/css/dota2styles.css
+++ b/source/css/dota2styles.css
@@ -100,7 +100,7 @@ a:hover {
 #awayTeam, #homeTeam {
 	border-radius:20px;
 	border:1px solid;
-	padding:10px;
+	padding:10px 0px;
 }
 
 #awayTeam {
